tests/baselines/reference/collisionThisExpressionAndEnumInGlobal.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndEnumInGlobal.ts (1 errors) ====
    enum _this { // Error
    ~~~~~~~~~~~~~~~~~~~~~
        _thisVal1,
    ~~~~~~~~~~~~~~
        _thisVal2,
    ~~~~~~~~~~~~~~
    }
    ~
!!! collisionThisExpressionAndEnumInGlobal.ts(1,1): error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
    var f = () => this;